[package]
name = "gateway_loadgen"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.59"
clap_derive = { version = "4.0.0-rc.1" }
csv = "1.4.0"
hdrhistogram = "7.5.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
reqwest = {version="0.13.2",features = ["json", "rustls-tls"]}
tokio = {version="1.49.0", features=["full"]}
